--- a/CMS2.Client/App.config
+++ b/CMS2.Client/App.config
@@ -16,11 +16,9 @@
     <add key="DeviceCode" value="S500" />
     <add key="RUId" value="00000000-0000-0000-0000-000000000000" />
     <add key="BcoId" value="5F668905-BEE3-4BEA-BD17-A284ACBDFC2C" />
-    <add key="UpInter" value="10" />
-    <add key="DownInter" value="50" />
-    <add key="ClientSettingsProvider.ServiceUri" value="" />
     <add key="isSync"  value="false"/>
     <add key="Filter"  value="Manila"/>
+    <add key="isSubserver" value="false"/>
   </appSettings>
   <connectionStrings>
     <add name="Cms" connectionString="Data Source=192.168.5.1;Initial Catalog=cms2_Beta5;User ID=sa;Password=d0me$tic$QL;Connect Timeout=20;" providerName="System.Data.SqlClient" />
@@ -69,9 +67,6 @@
       </setting>
       <setting name="CentralUsername" serializeAs="String">
         <value>sa</value>
-      </setting>
-      <setting name="IsSynchronizationSetup" serializeAs="String">
-        <value>False</value>
       </setting>
       <setting name="Filter" serializeAs="String">
         <value>Manila</value>
