--- a/CMS2.Client/CMS2.Client.csproj
+++ b/CMS2.Client/CMS2.Client.csproj
@@ -35,7 +35,7 @@
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>x86</PlatformTarget>
+    <PlatformTarget>x64</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>true</Optimize>
@@ -542,6 +542,7 @@
     <Compile Include="Utilities\Resizer.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="SyncHelper\Synchronization.cs" />
+    <Compile Include="ViewModels\BookingViewModel.cs" />
     <Compile Include="ViewModels\NewPasswordViewModel.cs" />
     <Compile Include="ViewModels\PaymentDetailsViewModel.cs" />
     <Compile Include="ViewModels\PaymentTurnoverViewModel.cs" />
