--- a/CMS2.Client/App.config
+++ b/CMS2.Client/App.config
@@ -19,8 +19,8 @@
     <add key="isSubserver" value="false" />
   </appSettings>
   <connectionStrings>
-    <add name="Cms" connectionString="Data Source=121.96.38.24;Initial Catalog=cms2_Beta3;User ID=sa;Password=z@nixtri2016;Connect Timeout=180;" providerName="System.Data.SqlClient" />
-    <!--<add name="Cms" connectionString="Data Source=192.168.254.102,1434;Initial Catalog=cms2_Beta3-central;User ID=sa;Password=mssql;Connect Timeout=180;" providerName="System.Data.SqlClient" />-->
+    <!--<add name="Cms" connectionString="Data Source=121.96.38.24;Initial Catalog=cms2_Beta3;User ID=sa;Password=z@nixtri2016;Connect Timeout=180;" providerName="System.Data.SqlClient" />-->
+    <add name="Cms" connectionString="Data Source=192.168.254.102,1434;Initial Catalog=cms_beta4;User ID=sa;Password=mssql;Connect Timeout=180;" providerName="System.Data.SqlClient" />
     <add name="CmsCentral" connectionString="Data Source=192.168.5.3;Initial Catalog=cms2_Beta4;User ID=sa;Password=Ap123456#;Connect Timeout=20;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
