--- a/CMS2.Client/CMS2.Client.csproj
+++ b/CMS2.Client/CMS2.Client.csproj
@@ -403,7 +403,6 @@
     </Compile>
     <Compile Include="ReportModels\PaymentSummary.cs">
       <DependentUpon>PaymentSummary.xsd</DependentUpon>
-      <SubType>Component</SubType>
     </Compile>
     <Compile Include="ReportModels\PaymentSummary.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -422,7 +421,6 @@
     </Compile>
     <Compile Include="ReportModels\TrackingDailyTrip.cs">
       <DependentUpon>TrackingDailyTrip.xsd</DependentUpon>
-      <SubType>Component</SubType>
     </Compile>
     <Compile Include="ReportModels\TrackingDailyTrip.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -437,7 +435,6 @@
     </Compile>
     <Compile Include="ReportModels\TrackingInsack.cs">
       <DependentUpon>TrackingInsack.xsd</DependentUpon>
-      <SubType>Component</SubType>
     </Compile>
     <Compile Include="ReportModels\TrackingInsack.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -551,6 +548,8 @@
     <Compile Include="ViewModels\PaymentTurnoverViewModel.cs" />
     <Content Include="Images\logos.ico" />
     <Content Include="DfIcon.ico" />
+    <None Include="Resources\online.png" />
+    <None Include="Resources\offline.png" />
     <EmbeddedResource Include="Reports\PaymentSummaryReport.resx">
       <DependentUpon>PaymentSummaryReport.cs</DependentUpon>
     </EmbeddedResource>
@@ -634,6 +633,8 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <Content Include="Images\offline.png" />
+    <Content Include="Images\online.png" />
     <Content Include="Reports\ShipmentPrintForm.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>ShipmentPrintForm.cs</LastGenOutput>
